# KlustrEye

./: .gitignore  Cargo.toml  README.md  index.html  next.config.mjs  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  rc-build-platform.yml  rc-build.yml  release-platform.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: db.rs  error.rs  lib.rs  main.rs
backend/src/ai/: anthropic.rs  azure.rs  mod.rs  ollama.rs  openai.rs
backend/src/k8s/: client.rs  helm.rs  mod.rs  port_forward.rs  provider.rs  resources.rs
backend/src/routes/: ai.rs  clusters.rs  grafana.rs  helm.rs  logs.rs  metrics.rs  mod.rs  opencost.rs  organizations.rs  port_forward.rs  resources.rs  settings.rs
backend/src/ws/: mod.rs  shell.rs  terminal.rs
docs/plans/: 2026-03-05-klustreye-features-design.md  2026-03-05-klustreye-features-implementation.md  2026-03-08-standalone-websocket-fix-design.md  2026-03-08-standalone-websocket-fix.md
scripts/: pack-server.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/splash/: index.html
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ai-chat-panel.tsx  cluster-color-provider.tsx  cluster-shell-terminal.tsx  cluster-switcher.tsx  command-palette.tsx  create-resource-dialog.tsx  edit-resources-dialog.tsx  error-boundary.tsx  header.tsx  keyboard-shortcuts-dialog.tsx  klustreye-logo.tsx  log-viewer.tsx  manage-organizations-dialog.tsx  mobile-sidebar-drawer.tsx  namespace-selector.tsx  (+18 more)
(+94 files in other folders)
