[package]
name = "backend"
version = "0.2.1-rc.1"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "backend"
crate-type = ["rlib"]

[[bin]]
name = "klustreye-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

kube = { version = "0.97", features = ["runtime", "derive", "ws", "client"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures = "0.3"
tokio-util = { version = "0.7", features = ["io", "compat"] }
bytes = "1"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dashmap = "6"
base64 = "0.22"
flate2 = "1"
tempfile = "3"
dirs = "6"

portable-pty = "0.8"
urlencoding = "2"
http = "1"
rust-embed = "8"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
